--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 0,200,255;
+  --bs-primary-rgb: 0,150,255;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
@@ -237,7 +237,7 @@ sup {
 }
 
 a {
-  color: #27bfe6;
+  color: #078eaf;
   text-decoration: underline;
 }
 a:hover {
